Revert code cleanup operation